# consolidated-workspace

./: .env.template  .gitattributes  .gitignore  .repo-locked  CREDENTIALS_AUDIT.md  MASTER_MIGRATION.ps1  MIGRATION_PLAN.md  NEXT_STEPS.md  README.md  SSH_KEY_INSTRUCTIONS.md  STATUS.md  create-github-repo.ps1  fix-ssh-key.ps1  lock-repo.ps1  organize-structure.ps1  push-to-github.ps1  pyproject.toml  requirements.txt  run-next-steps.ps1  setup-autostart.ps1  setup-pycharm.ps1  start-pycharm.bat  start-pycharm.ps1  test-repo.ps1
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml
.secrets/: credentials-reference.txt
Development/TestProject/: hello.js  hello.py
Production/ProductionApp/: .env.example  .gitignore  Dockerfile  Dockerfile.genx  PROGRESS_REPORT.md  README.md  docker-compose.yml  genx_main.py  healthcheck.js  jest.config.js  package-lock.json  package.json
Production/ProductionApp-Desktop/: TRADING_SYSTEM_README.md
Trading/GenX_FX_MASTER/: .dockerignore  A6_9V_ORGANIZATION_README.md  A6_9V_config.json  AZURE_DEPLOYMENT.md  Dockerfile  deploy-to-azure.ps1  requirements.txt  trade_monitor.py
Trading/GenX_FX_Remote/: .gitignore  A69V_COMPLETE_SETUP_FINAL.md  A69V_GENX_INTEGRATION_COMPLETE.md  A69V_SETUP_COMPLETE.md  A69V_SYNC_SUMMARY.md  A69V_TOKEN_INSTRUCTIONS.md  AMP_DEPLOYMENT_COMPLETE.md  DEPLOYMENT_IN_PROGRESS.md  DEVELOPMENT_ENVIRONMENT_SETUP_COMPLETE.md  ENVIRONMENT_SETUP_COMPLETE.md  GITHUB_TOKEN_AWS_DEPLOYMENT.md  JETBRAINS_SETUP.md  JETBRAINS_SETUP_COMPLETE.md  MT4_Signals.csv  PYCHARM_24_7_SETUP_GUIDE.md  README.md  WARP.md  genx.ps1  (+66 more)
(+412 files in other folders)
