[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consolidated-workspace"
version = "1.0.0"
description = "Consolidated workspace for all trading system projects"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
